# Parallel_Compute_Engine

./: .gitignore  README.md  environment.sh
epihiper_setup_utils/: .gitignore  README.rst  pipeline_main.sh  pyproject.toml
epihiper_setup_utils/src/epihiper_setup_utils/: calibration_handler.py  calibration_setup.py  calibration_setup_parser.py  cli.py  common_setup.py  env_file.py  mackenzie_agent.py  projection_handler.py  projection_setup.py  projection_setup_parser.py
epihiper_setup_utils/src/epihiper_setup_utils/bayes_opt_task_source/: config.py  main.py
epihiper_setup_utils/src/epihiper_setup_utils/csm_task_source/: config.py  main.py
epihiper_setup_utils/src/epihiper_setup_utils/minimizer/: __init__.py  bayes_opt_minimizer.py  convex_scalar_minimizer.py  minimizer_db.py
epihiper_setup_utils/src/epihiper_setup_utils/post_opt_task_source/: config.py  main.py
epihiper_setup_utils/src/epihiper_setup_utils/proj_task_source/: config.py  main.py
epihiper_setup_utils/src/epihiper_setup_utils/templates/: epihiper_calib_anvil.sbatch.jinja2  epihiper_calib_bridges2.sbatch.jinja2  epihiper_calib_rivanna.sbatch.jinja2  epihiper_proj_anvil.sbatch.jinja2  epihiper_proj_bridges2.sbatch.jinja2  epihiper_proj_rivanna.sbatch.jinja2
mackenzie/: .gitignore  README.rst  pyproject.toml
mackenzie/src/mackenzie/: cli.py  makecert.py
mackenzie/src/mackenzie/agent/: agent.py  config.py  main.py  slurm_pipeline.py
mackenzie/src/mackenzie/cmd/: config.py  main.py
mackenzie/src/mackenzie/controller/: config.py  controller.py  main.py
mackenzie/src/mackenzie/db/: db_common.py  job_db.py  job_db.sql  job_db_gen.py  setup_db.py  task_db.py
(+41 files in other folders)
